Add Sidecar component for build envoy configuration